FELIX-1715: osgi:update can not be used on transformed artifacts
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@825093 13f79535-47bb-0310-9956-ffa450edef68